--- a/7-creating-app/views/index.ejs
+++ b/7-creating-app/views/index.ejs
@@ -1,2 +1,4 @@
 <% layout('main') %>
+<% block('header', 'Hello, this is block.header content') %>
 <p>Welcome to <%= title %></p>
+<%- partial('breadcrumbs') %>
