--- a/7-creating-app/views/main.ejs
+++ b/7-creating-app/views/main.ejs
@@ -5,7 +5,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
+<%- partial('breadcrumbs') %>
 <h1><%= title %></h1>
+<%= blocks.header %>
 <%- body %>
 </body>
 </html>
